# kedro-kobe-analysis

./: .gitignore  README.md
kobe-shot-analysis/: .gitignore  README.md  app.py  best_model.pkl  dash.py  decision_model.pkl  pyproject.toml  requirements.txt  utils.py
kobe-shot-analysis/conf/base/: catalog.yml  parameters.yml
kobe-shot-analysis/notebooks/: generate_features.ipynb
kobe-shot-analysis/src/kobe_shot_analysis/: __init__.py  __main__.py  pipeline_registry.py  settings.py
kobe-shot-analysis/src/kobe_shot_analysis/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
kobe-shot-analysis/src/kobe_shot_analysis/pipelines/features/: nodes.py  pipeline.py
kobe-shot-analysis/src/kobe_shot_analysis/pipelines/model_training/: nodes.py  pipeline.py
