[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "kobe_shot_analysis"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=0.19.12",]

[project.scripts]
kobe-shot-analysis = "kobe_shot_analysis.__main__:main"

[tool.kedro]
package_name = "kobe_shot_analysis"
project_name = "kobe-shot-analysis"
kedro_init_version = "0.19.12"
tools = "['Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "kobe_shot_analysis.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "7e8b2fa82cd54650b9a5aff4f7e5341a"
